src/objects/AcctSeed__Journal_Entry__c.object
<CustomObject>
    <description>Used to document accounting related entries into the transaction table.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Journal Entry</relationshipLabel>
        <relationshipName>Journal_Entry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Year__c</fullName>
        <formula>LEFT( AcctSeed__Accounting_Period__r.Name ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Currency_Conversion_Rate__c</fullName>
        <label>Currency Conversion Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Journal_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Informational field only to note date journal is created.</inlineHelpText>
        <label>Journal Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the associated ledger.</description>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Line_Count__c</fullName>
        <inlineHelpText>Number of journal entry lines associated with this record.</inlineHelpText>
        <label>Line Count</label>
        <summaryForeignKey>AcctSeed__Journal_Entry_Line__c.AcctSeed__Journal_Entry__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Out_of_Balance__c</fullName>
        <formula>AcctSeed__Total_Debits__c - AcctSeed__Total_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Debits - Total Credits. Shows the total amount a Journal Entry is Out of Balance.</inlineHelpText>
        <label>Out of Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Journal_Entry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated recurring journal entry for this record.</inlineHelpText>
        <label>Recurring Journal Entry</label>
        <referenceTo>AcctSeed__Recurring_Journal_Entry__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>A value of &quot;Posted&quot; indicates the record is final.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Waiting for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Credits__c</fullName>
        <inlineHelpText>Total Debits from Journal entry Lines. Must equal Total Credits at time of posting.</inlineHelpText>
        <label>Total Credits</label>
        <summarizedField>AcctSeed__Journal_Entry_Line__c.AcctSeed__Credit__c</summarizedField>
        <summaryForeignKey>AcctSeed__Journal_Entry_Line__c.AcctSeed__Journal_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Debits__c</fullName>
        <inlineHelpText>Total Debits from Journal entry Lines. Must equal Total Credits at time of posting.</inlineHelpText>
        <label>Total Debits</label>
        <summarizedField>AcctSeed__Journal_Entry_Line__c.AcctSeed__Debit__c</summarizedField>
        <summaryForeignKey>AcctSeed__Journal_Entry_Line__c.AcctSeed__Journal_Entry__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscoras__Billing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Journal_Entry_Category__c</fullName>
        <label>Journal Entry Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Vendor Invoice</fullName>
                </value>
                <value>
                    <fullName>Inventory Update</fullName>
                </value>
                <value>
                    <fullName>Owner Adjustment</fullName>
                </value>
                <value>
                    <fullName>Consignor Payable</fullName>
                </value>
                <value>
                    <fullName>Lease Invoice</fullName>
                </value>
                <value>
                    <fullName>WO Invoice</fullName>
                </value>
                <value>
                    <fullName>Material Issue WIP</fullName>
                </value>
                <value>
                    <fullName>Material Return WIP</fullName>
                </value>
                <value>
                    <fullName>Misc Charge WIP</fullName>
                </value>
                <value>
                    <fullName>Labor WIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscoras__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__RMA_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA Line</label>
        <referenceTo>inscor__RMA_Line__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__RO_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RO Issue</label>
        <referenceTo>inscor__RO_Issue__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>inscor__Release__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__Transaction_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Activity</label>
        <referenceTo>inscor__Activity__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Journal Entry</label>
    <listViews>
        <fullName>AID_JEs</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>AID</value>
        </filters>
        <label>AID JEs</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Posted</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Posted</value>
        </filters>
        <label>Unposted</label>
    </listViews>
    <listViews>
        <fullName>Closing_TB_Uploads</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Trial Balance</value>
        </filters>
        <label>Closing TB Uploads</label>
    </listViews>
    <listViews>
        <fullName>PO_JEs</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PO</value>
        </filters>
        <label>PO JEs</label>
    </listViews>
    <listViews>
        <fullName>PO_JEs_Approved</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>PO</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>PO JEs - Approved</label>
    </listViews>
    <listViews>
        <fullName>Payroll_JE</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Payroll</value>
        </filters>
        <label>Payroll JE</label>
    </listViews>
    <listViews>
        <fullName>RO_JEs_Approved</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>RO</value>
        </filters>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>RO JEs - Approved</label>
    </listViews>
    <listViews>
        <fullName>Trial_Balance_GoLive_Pentagon</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Journal_Date__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Total_Debits__c</columns>
        <columns>AcctSeed__Total_Credits__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Trial Balance</value>
        </filters>
        <label>Trial Balance GoLive - Pentagon</label>
    </listViews>
    <nameField>
        <label>Journal Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Accounting_Period_Is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(AcctSeed__Accounting_Period__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>